--- a/index.html
+++ b/index.html
@@ -326,22 +326,19 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-text">
-                <p>&copy; 2025 Dawood Rafqat Ali. All rights reserved.</p>
-                <span class="designer-credit">
-                    Designed with ❤️ by 
-                    <a href="https://wa.me/923494206922" class="mikran-link" target="_blank">Muhammad Mikran Sandhu</a>
-                    at 
-                    <a href="https://alphasolutions.online" class="alpha-link" target="_blank">Alpha Solution</a>
-                </span>
-            </div>
-            <div class="footer-social">
-                <a class="social-link" href="https://wa.me/923264709542" target="_blank" aria-label="WhatsApp">
-                    <i class="fab fa-whatsapp"></i>
-                </a>
-            </div>
-        </div>
+            <center>
+                <div class="footer-content">
+                    <div class="footer-text">
+                        <p>&copy; 2025 Dawood Rafqat Ali. All rights reserved.</p>
+                        <span class="designer-credit">
+                            Designed with ❤️ by 
+                            <a href="https://wa.me/923494206922" class="mikran-link" target="_blank">Muhammad Mikran Sandhu</a>
+                            at 
+                            <a href="https://alphasolutions.online" class="alpha-link" target="_blank">Alpha Solution</a>
+                        </span>
+                    </div>
+                </div>
+            </center>
     </footer>
 
     <!-- Floating WhatsApp Button -->
