--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
                             </div>
                         </div>
                         <div class="resume-download">
-                            <button class="btn btn-primary download-btn" onclick="downloadResume()">
+                            <a href="Dawood_Rafaqat_Resume.pdf" class="btn btn-primary download-btn" download>
                                 <i class="fas fa-download"></i> Download Resume PDF
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
